feat: add css and new templatefile, and add stylelint (among other minor changes)

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel = "stylesheet" type = "text/css"
           href = "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"/>
 
-    <link href = "{{ url_for('static', filename='style.css') }}" rel = "stylesheet" type = "text/css">
+    <link href = "{{ url_for('static', filename='css/style.css') }}" rel = "stylesheet" type = "text/css">
 
     <!-- TODO: actually write the description out -->
     <meta name = "description" content = "A Maori Dictionary">
@@ -19,18 +19,16 @@
 <body>
 <div id = "container">
 
-    <header>
-        <h1>{% block heading %}{% endblock %}</h1>
+    <header> <!-- todo: rejig header -->
+        <h1>Maori Dictionary</h1>
+        <h2>{% block heading %}{% endblock %}</h2>
     </header>
 
     <nav>
         <input type = "checkbox" name = "drop_down_menu"/>
         <span></span>
-        <span></span>
-        <span></span>
         <ul>
             <li><a href = "/">Home</a></li>
-
         </ul>
     </nav>
 
