major refactor of project
deprecate reused databases class and change its functionality/behaviour for now in favour of potentially moving to sqlalchemy

Signed-off-by: CyberFlame <cyberflameu@gmail.com>

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: rgb(255 211 220);
+  background-color: #ffd3dc;
 }
 
 #container {
@@ -228,9 +228,9 @@ footer img {
 
     /* to stop flickering of text in safari */
 
-    transform-origin: 0% 0%;
+    transform-origin: 0 0;
     transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
   }
 
   nav ul li {
