--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,19 @@
 
 <head>
     <meta charset = "utf-8">
-    <title>Maori Dictionary | Home</title>
+    <title>Boardgames Dashboard | Home</title>
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
-    <!-- normalize.css v8.0.1 (hosted via Cloudflare's CDN) | MIT License | github.com/necolas/normalize.css -->
+    <!-- normalize.min.css (minified) v8.0.1 (hosted via Cloudflare's CDN) | MIT License | github.com/necolas/normalize.css -->
+    <!--suppress JSUnresolvedLibraryURL -->
     <link rel = "stylesheet" type = "text/css"
-          href = "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"/>
+          href = "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+          integrity = "sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+          crossorigin = "anonymous" referrerpolicy = "no-referrer"/>
 
-    <link href = "{{ url_for('static', filename='css/style.css') }}" rel = "stylesheet" type = "text/css">
+    <link href = "{{ url_for('static', path='css/style.css') }}" rel = "stylesheet" type = "text/css">
 
     <!-- TODO: actually write the description out -->
-    <meta name = "description" content = "A Maori Dictionary">
+    <meta name = "description" content = "Dashboard for board-games club">
 </head>
 
 <!-- TODO: rejig everything from here onwards -->
@@ -20,12 +23,14 @@
 <div id = "container">
 
     <header> <!-- todo: rejig header -->
-        <h1>Maori Dictionary</h1>
+        <h1>Boardgames Dashboard</h1>
         <h2>{% block heading %}{% endblock %}</h2>
     </header>
 
     <nav>
-        <input type = "checkbox" name = "drop_down_menu"/>
+        <label>
+            <input type = "checkbox" name = "drop_down_menu"/>
+        </label>
         <span></span>
         <ul>
             <li><a href = "/">Home</a></li>
