--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
 
     <link href = "{{ url_for('static', path='css/style.css') }}" rel = "stylesheet" type = "text/css">
 
+    {% block head %}
+    {% endblock %}
+
     <!-- TODO: actually write the description out -->
     <meta name = "description" content = "Dashboard for board-games club">
 </head>
@@ -38,7 +41,7 @@
     </nav>
 
     <main>
-        {% block main %}
+        {% block content %}
         {% endblock %}
     </main>
 
