feat(auth): add groundwork for authentication based off fastapi docs
(includes minor adaptations but has not been shaped for the project yet)

Signed-off-by: CyberFlame <cyberflameu@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
         <span></span>
         <ul>
             <li><a href = "/">Home</a></li>
+            <li><a href = "/games">Games</a></li>
         </ul>
     </nav>
 
