fix: get json POST handling functional
Signed-off-by: CyberFlame <cyberflameu@gmail.com>

--- a/templates/games.html
+++ b/templates/games.html
@@ -63,21 +63,9 @@
                 }
             }
         };
-    </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const HTTP_409_CONFLICT = 409;
-            document.getElementById('submitNewGame').addEventListener('submit', function() {
-                fetch(event.target.action, {
-                    method: 'POST',
-                    body: new FormData(this),
-                }).then(function(response) {
-                    if (!response.ok && response.status === HTTP_409_CONFLICT) {
-                        alert('You cannot add a game with a name that already exists in the database!');
-                        // TODO: abstract this into utility class, and handle the response
-                    }
-                });
-            });
+        document.addEventListener('DOMContentLoaded', () => {
+            ResourceManager.handleFormSubmission('submitNewGame',
+                'You cannot add a game with a name that already exists in the database!');
         });
     </script>
 {% endblock %}
