--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,7 @@
     menu
 {% endblock %}
 
-{% block main %}
+{% block content %}
     <h1>Home</h1>
-    <p>Menu</p>
-    <ul>
-        <li><a href = "/menu">Menu</a></li>
-        <li><a href = "/menu/create">Create</a></li>
-    </ul>
+    <p>This is the homepage — use the navigation bar on the left to visit the rest of the site</p>
 {% endblock %}
